[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano_synmist"
version = "0.0.3"
description = "A package for overlaying synthetic mistakes on midi piano performances"
readme = "README.md"
authors = [
    {name = "Alia Morsi", email = "morsi.alia@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pretty_midi",
    "partitura>=1.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
adapters = ["torch"]

[project.urls]
"Homepage" = "https://github.com/alia-morsi/piano-synmist"
"Bug Tracker" = "https://github.com/alia-morsi/piano-synmist/issues"

[tool.setuptools.packages.find]
where = ["."]


